Day-05/tls-based-ingress/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-service

spec:
  type: ClusterIP

  selector:
    app: flask-app

  ports:
    - port: 80
      targetPort: 5000
