Day-05/tls-based-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hello-ingress

spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - myflaskapp.in

    secretName: app-secret
    
  rules:
  - host: myflaskapp.in

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: flask-service

            port:
              number: 80
